Fixed misalignments at 目標の紐付け先.

--- a/skrum_frontend/src/project/OKR/OKRAlignmentsInfo/OKRAlignmentsInfo.css
+++ b/skrum_frontend/src/project/OKR/OKRAlignmentsInfo/OKRAlignmentsInfo.css
@@ -66,7 +66,6 @@
   border: 1px solid #8e9aa6;
   border-radius: 50px;
   color: #8e9aa6;
-  font-size: 14px;
   font-size: 1.4rem;
 }
 .btn-arrow-r {
@@ -153,12 +152,12 @@
 }
 
 .overall_situation {
-  width: 32.5%;
+  /*width: 32.5%;*/
   width: calc(36.5% - 30px);
   background-color: #fff;
 }
 .content {
-  padding: 30px 65px 30px 70px;
+  /*padding: 30px 0;*/
 }
 .overall_info h2 {
   font-size: 14px;
@@ -167,7 +166,7 @@
 }
 
 .list {
-  margin: 30px 0 80px;
+  /*margin: 30px 0 80px;*/
   /*background-color: #fff;*/
 }
 .list .ttl {
@@ -303,28 +302,28 @@
   width: 8%;
   padding-left: 10px;
 }
-.group {
-  width: 20%;
-  padding-left: 10px;
-}
+/*.group {*/
+  /*width: 20%;*/
+  /*padding-left: 10px;*/
+/*}*/
 .list .goal_for table .percent .sup {
   margin-left: 5px;
 }
 .circle_gray {
   border-color: #f0f4f5;
 }
-.group {
-  width: auto;
-  padding: 5px;
-}
-.target_number {
-  width: auto;
-  padding: 0;
-  font-size: 14px;
-  text-align: right;
-  min-width: 12em;
-  padding-top: 22px;
-}
+/*.group {*/
+  /*width: auto;*/
+  /*padding: 5px;*/
+/*}*/
+/*.target_number {*/
+  /*width: auto;*/
+  /*padding: 0;*/
+  /*font-size: 14px;*/
+  /*text-align: right;*/
+  /*min-width: 12em;*/
+  /*padding-top: 22px;*/
+/*}*/
 
 /*# sourceMappingURL=timeManagement1.css.map */
 
@@ -407,12 +406,8 @@
   vertical-align: middle;
   content: "";
 }
-.header {
-  display: flex;
-  margin-bottom: 1.5em;
-}
 .info {
-  width: 100%;
+  /*width: 100%;*/
   margin-right: 1.5em;
 }
 .overall {
@@ -442,23 +437,22 @@
   stroke: #626A7F;
 }
 .header {
-  display: flex;
-  width: 100%;
-  padding: 1em 0 0.5em 0;
+  padding: 15px 8px 5px 0px;
+  /*border-bottom: 1px solid #d8dfe5;*/
   background-color: #fff;
+  font-size: 13px;
 }
 .content {
   margin: 1px auto 0 auto;
   background-color: #fff;
 }
 .list {
-  float: right;
-  width: calc(100% - 60px * 8);
+  /*float: right;*/
 }
 .detail {
-  display: flex;
   padding: 0.25em 0;
-  border-bottom: 1px solid #d8dfe5;
+  border-bottom: 1px solid whitesmoke;
+  display: flex;
 }
 .nameBox {
   display: flex;
@@ -482,7 +476,34 @@
   font-size: x-small;
   font-weight: bold;
 }
-.count {
+.chart {
+  width: 480px;
+}
+.header > div, .content > div {
+  max-width: calc(480px + 270px + 48px);
+  margin: 0 auto;
+  display: flex;
+}
+.content > div {
+}
+.group {
+  /*padding: 15px 0px 5px 0px;*/
+  background-color: #fff;
+  display: flex;
+  width: calc(100% - 480px - 48px);
+  max-width: 270px;
+}
+.list {
+  width: calc(100% - 480px);
+}
+.content .group {
+  width: 100%;
+}
+.numberOfOkrs {
+  width: 48px;
+  text-align: right;
+}
+.content .numberOfOkrs {
   margin: auto 0;
-  font-size: 14px;
+  padding-right: 8px;
 }
