--- a/skrum_frontend/src/project/OKR/OKRContainer.css
+++ b/skrum_frontend/src/project/OKR/OKRContainer.css
@@ -510,19 +510,6 @@
   /*margin-top: 20px;*/
   margin-bottom: 30px;
 }
-.alignmentheader {
-  padding: 15px 0px 5px 0px;
-  border-bottom: 1px solid #d8dfe5;
-  background-color: #fff;
-  text-align: right;
-  font-size: 14px;
-}
-.alignment {
-  margin-right: 270px;
-}
-.numberOfOkrs {
-  margin-right: 165px;
-}
 .spinner {
   height: 100%;
   width: 100%;
